# plompt

./: CMakeLists.txt  README.md
scripts/: default.cfg  default.conf  update_prompt.sh
src/: color.h  config.h.in  currentdir_segment.cpp  currentdir_segment.h  main.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  prompt.cpp  prompt.h  segment.cpp  segment.h  shell.cpp  shell.h  special_characters.cpp  special_characters.h  style.cpp  style.h  tools.cpp  tools.h  username_segment.cpp  username_segment.h
src/prompt/: arrow_prompt.cpp  arrow_prompt.h  custom_prompt.cpp  custom_prompt.h  prompt.cpp  prompt.h
src/segment/: currentdir_segment.cpp  currentdir_segment.h  git_segment.cpp  git_segment.h  hostname_segment.cpp  hostname_segment.h  segment.cpp  segment.h  separator_segment.cpp  separator_segment.h  text_segment.cpp  text_segment.h  username_segment.cpp  username_segment.h
src/shell/: bash_shell.cpp  bash_shell.h  shell.h
